Fix pagination button positions on small screens (#2977)

--- a/themes/finna2/less/finna/image-popup.less
+++ b/themes/finna2/less/finna/image-popup.less
@@ -637,6 +637,9 @@
 .result .recordcover-holder .next-image {
     display: none;
 } 
+.recordcover-holder {
+    position: relative;
+}
 .grid-image .image-popup-trigger.no-image .iconlabel {
     box-shadow: initial;
 }
